base/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: webroot-pv
          mountPath: /var/www/html
          #TODO probes
          #TODO metrics
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: webroot-pv
        persistentVolumeClaim:
          claimName: webroot-pvc
