base/nginx/healthcheck_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
        - name: nginx
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: http
            initialDelaySeconds: 5
            periodSeconds: 3
