base/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $(HOSTNAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
  tls:
  - hosts:
    - $(HOSTNAME)
    secretName: $(HOSTNAME)-tls
